# equipo36mlops

./: .gitignore  CAMBIOS_DVC.md  DVC_COMMANDS.md  DVC_QUICKSTART.md  DVC_README.md  DVC_WORKFLOW.md  Dockerfile  EJEMPLO_USO_COMPLETO.md  EJEMPLO_USO_DVC.md  GUIA_SETUP_DVC.md  INDICE_DVC.md  Makefile  QUICKSTART_DVC.md  README.md  README_DVC.md  RESUMEN_MEJORAS.md  add_to_dvc.sh  api.py  cleanup_dvc.sh  dvc.yaml  pyproject.toml  requirements.txt  setup_aws_credentials.sh  setup_dvc.sh
.dvc/: config
config/: training.yaml
data/: mlflow.dvc
data/baseline/: student_performance_baseline.csv
data/drifted/features/: student_entry_performance_drifted_case_one_features.csv  student_entry_performance_drifted_case_two_features.csv
data/drifted/raw/: student_entry_performance_drifted_case_one.csv  student_entry_performance_drifted_case_two.csv
data/processed/: .gitignore  student_performance.csv  student_performance.csv.dvc  student_performance_features.csv.dvc
data/raw/: .gitignore  student_entry_performance.csv.dvc
data/raw/After preprocessing/: .gitignore
docs/: DVC_ARTIFACTS.md  DVC_WORKFLOW.md  ML_TEMP_FILES.md  mkdocs.yml
docs/docs/: index.md
notebooks/: 1.0-el-EDA_cleaning.ipynb  1_1_EDA-and-Processing.ipynb  1_EDA_and_Cleaning.ipynb  2_Data_Processing.ipynb  3_Model_Training_and_Registering.ipynb  4_Data_Driffting_Generator.ipynb  Preprocesamieto de Datos.ipynb  README_DVC.md  onehot_encoder.pkl
references/: ML Canvas Student Performance on an Entrance Examination Dataset.docx
reports/: metrics_monitoring.md
scripts/: 02-Data_Processing
src/: README.md  __init__.py
src/data/: __init__.py  baseline_generator.py  clean_data.py
src/features/: __init__.py  build_features.py  calculate_features.py
src/models/: __init__.py  train_model.py
src/pipeline/: README.md  run_training.py  sklearn_like_classes.py
tests/: test_build_features.py  test_clean_data.py  test_run_training.py  test_sklearn_like_classes.py  test_train_model.py
