[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "equipo36mlops"
version = "0.0.1"
description = "Este es el proyecto dedicado a la materia MLOps por parte del Equipo 36 en la Maestria en Inteligencia Artificial Aplicada del Tec de Monterrey. Desarrollado para el trimestre sep-dic 2025."
authors = [
  { name = "Luis \u00c1ngel Garc\u00eda" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
dependencies = [
    "black",
    "flake8",
    "isort",
    "mkdocs",
    "pip",
    "pytest",
    "python-dotenv",
]
requires-python = "~=3.13.0"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.isort]
profile = "black"
known_first_party = ["equipo36mlops"]
force_sort_within_sections = true


